# uvAgentStack

./: .gitignore  CLI modifications.md  README.md  pyproject.toml  tox.ini  uvmigrationformpoetry.md
agentstack/: main.py
agentstack/cli/: cli.py
agentstack/generation/: files.py
agentstack/templates/crewai/{{cookiecutter.project_metadata.project_slug}}/: pyproject.toml
tests/: test_generation_files.py
