[tool.uv]
name = "{{cookiecutter.project_metadata.project_name}}"
version = "{{cookiecutter.project_metadata.version}}"
description = "{{cookiecutter.project_metadata.description}}"
authors = ["{{cookiecutter.project_metadata.author_name}}"]
license = "{{cookiecutter.project_metadata.license}}"

[tool.uv.dependencies]
python = ">=3.10,<=3.13"
agentstack = {version = "{{cookiecutter.project_metadata.agentstack_version}}", extras = ["{{cookiecutter.framework}}"]}

[project.scripts]
{{cookiecutter.project_metadata.project_name}} = "{{cookiecutter.project_metadata.project_name}}.main:run"
run_crew = "{{cookiecutter.project_metadata.project_name}}.main:run"
train = "{{cookiecutter.project_metadata.project_name}}.main:train"
replay = "{{cookiecutter.project_metadata.project_name}}.main:replay"
test = "{{cookiecutter.project_metadata.project_name}}.main:test"